3683 pfiles shouldn't try to trace itself 3684 pfiles crashes on processes with no files 3685 getsockname should set the sa_family_t for unbound unix domain sockets 3686 pfiles shows incorrect socket information on some getsockname calls Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Reviewed by: Dan McDonald <danmcd@nexenta.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Gordon Ross <gwr@nexenta.com>